# Telegram_Anti-harassment_two-way_chatbot

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  bot.py  config.py  docker-compose.yml  requirements.txt
database/: db_manager.py  models.py
handlers/: __init__.py  admin_handler.py  callback_handler.py  command_handler.py  user_handler.py
services/: ai_service.py  blacklist.py  gemini_service.py  model_service.py  thread_manager.py  verification.py
src/: config.rs  db.rs  main.rs  models.rs
src/handlers/: admin_handler.rs  callback_handler.rs  command_handler.rs  mod.rs  user_handler.rs
src/services/: ai_service.rs  blacklist_service.rs  mod.rs  network_service.rs  rate_limiter.rs  rss_service.rs  thread_manager.rs  verification_service.rs
src/utils/: decorators.rs  message_sender.rs  mod.rs
watchtower/: README.md  docker-compose.yml
